force-app/main/default/objects/Quote/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <formula>(TCV__c -  One_Time_Fees__c  ) / ( Term_Months__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>