force-app/main/default/objects/Quote/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Pending Proposal Approval</fullName>
            </value>
            <value>
                <fullName>Proposal Rejected</fullName>
            </value>
            <value>
                <fullName>Proposal Approved</fullName>
            </value>
            <value>
                <fullName>Order Approved</fullName>
                <isActive>false</isActive>
                <label>Order Approved</label>
            </value>
            <value>
                <fullName>Order Rejected</fullName>
                <isActive>false</isActive>
                <label>Order Rejected</label>
            </value>
            <value>
                <fullName>Pending Order Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Order Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>