force-app/main/default/objects/Quote/fields/Contact_Billing__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Contact Billing)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>