force-app/main/default/objects/Quote/fields/Contact_Buying__c.field-meta.xml
<CustomField>
    <fullName>Contact_Buying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>