force-app/main/default/objects/Quote/fields/Contact_Buying_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Buying_Address__c</fullName>
    <label>Buyer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>