force-app/main/default/objects/Quote/fields/Contact_Buying_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Buying_Email__c</fullName>
    <label>Buyer Email</label>
    <type>Email</type>
</CustomField>