force-app/main/default/objects/Quote/fields/Contact_Buying_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Buying_Phone__c</fullName>
    <label>Buyer Phone</label>
    <type>Phone</type>
</CustomField>