force-app/main/default/objects/Quote/fields/Exit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR__c</fullName>
    <label>Exit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>