force-app/main/default/objects/Quote/fields/Implementation_Payable__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Payable__c</fullName>
    <defaultValue>&quot;with contract signature&quot;</defaultValue>
    <label>Implementation Payable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>with contract signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>