force-app/main/default/objects/Quote/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <inlineHelpText>Defines the invoicing period schedule</inlineHelpText>
    <label>Invoice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
                <default>true</default>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>