force-app/main/default/objects/Quote/fields/Is_Flow_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Flow_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flow Update</label>
    <type>Checkbox</type>
</CustomField>