force-app/main/default/objects/Quote/fields/MMR_ACV__c.field-meta.xml
<CustomField>
    <fullName>MMR_ACV__c</fullName>
    <formula>ACV__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MMR (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>