force-app/main/default/objects/Quote/fields/Non_Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewal_Notice_Days__c</fullName>
    <inlineHelpText>Number of days before contract end date the customer auto renews</inlineHelpText>
    <label>Non Renewal Notice Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>