force-app/main/default/objects/Quote/fields/One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fees__c</fullName>
    <label>One-Time Fees</label>
    <summarizedField>QuoteLineItem.Bookings__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Recurring__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>