force-app/main/default/objects/Quote/fields/One_Time_Fees_Template__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fees_Template__c</fullName>
    <formula>IF( One_Time_Fees__c = 0, NULL, One_Time_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One-Time Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>