force-app/main/default/objects/Quote/fields/Original_ACV__c.field-meta.xml
<CustomField>
    <fullName>Original_ACV__c</fullName>
    <label>Original ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>