force-app/main/default/objects/Quote/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <inlineHelpText>Time the customer has to pay an invoice after it’s issued in days. “NET” means “due in full (net of discounts)”</inlineHelpText>
    <label>Payment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>