force-app/main/default/objects/Quote/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <formula>&quot;Dazos LLC&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider</label>
    <type>Text</type>
</CustomField>