force-app/main/default/objects/Quote/fields/Subscription_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Total__c</fullName>
    <formula>Year_1_ARR__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>