force-app/main/default/objects/Quote/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <inlineHelpText>Total amount of recurring revenue and one-time fees the customer will pay over the entire course of this contract</inlineHelpText>
    <label>TCV</label>
    <summarizedField>QuoteLineItem.Bookings__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>