force-app/main/default/objects/Quote/fields/Toggle__c.field-meta.xml
<CustomField>
    <fullName>Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toggle</label>
    <type>Checkbox</type>
</CustomField>