force-app/main/default/objects/Quote/fields/Total_EINs__c.field-meta.xml
<CustomField>
    <fullName>Total_EINs__c</fullName>
    <label>Total EINs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>