force-app/main/default/objects/Quote/fields/Year_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Year_1_ARR__c</fullName>
    <label>Year 1 ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>