force-app/main/default/objects/Quote/validationRules/Cannot_Edit_After_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_After_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW())&amp;&amp;OR(ISPICKVAL(Approval_Status__c,&quot;Proposal Approved&quot;),ISPICKVAL(Approval_Status__c,&quot;Order Rejected&quot;))&amp;&amp; $Profile.Name&lt;&gt;&quot;System Administrator&quot; &amp;&amp; NOT(Is_Flow_Update__c) &amp;&amp; NOT(ISCHANGED(Is_Flow_Update__c))</errorConditionFormula>
    <errorMessage>You cannot edit a Quote once it&apos;s been Proposal approved. Use the &apos;Unlock Quote&apos; button to unlock this Quote for editing. Please note that you will have to re-submit for Approval if you go this route.</errorMessage>
</ValidationRule>