force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>ACV__c</columns>
    <columns>CreatedBy</columns>
    <columns>Create_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>